# petrified

./: README.md  petrified.cabal
app/: Main.hs
src/Petrified/: App.hs
src/Petrified/Logic/: Cellular.hs  Environment.hs  Genetics.hs
test/: Spec.hs
test/PetrifiedSpec/LogicSpec/: CellularSpec.hs
